<resources>
    <string name="app_name">My Workout Organizer</string>
    <string name="workouts_loaded">Workouts loaded</string>
    <string name="error_cannot_find_workouts">Cannot find workouts</string>
    <string name="changes_saved">Changes saved with success</string>
    <string name="cannot_save_workout">Cannot save workout</string>
    <string name="cannot_save_changes_in_cloud">Cannot save changes in cloud, verify your connection</string>
    <string name="actual_workout_not_defined">Actual workout not defined yet</string>
    <string name="success">Success</string>
    <string name="empty_name">Empty name</string>
    <string name="empty_description">Empty description</string>
    <string name="empty_fields">Empty fields</string>
    <string name="invalid_num_of_series">Invalid num of series, should be between 1 and 6</string>
    <string name="too_long_name">Too long name</string>
    <string name="too_long_value">Too long value</string>
    <string name="too_long_description">Too long description</string>
    <string name="invalid_time_of_rest">Invalid time of rest, should be between 0 and 999</string>
    <string name="invalid_weight">Invalid weight, should be between 0 and 999</string>
    <string name="exercise_created">Exercise created</string>
    <string name="no_division_created">No divisions created for the workout</string>
    <string name="workout_created">Workout created</string>
    <string name="error">Error</string>
    <string name="workout_not_saved">Workout not saved yet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_workout_name">Workout Name</string>
    <string name="hint_workout_description">Workout Description</string>
    <string name="hint_resttime">Rest time</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_series">Series</string>
    <string name="exercise_description">Exercise Description</string>
    <string name="reps">Reps = </string>
    <string name="hint_exercise_name">Exercise Name</string>
    <string name="hint_division_description">Division description</string>
    <string name="invalid_divisions">There are invalid divisions</string>
    <string name="save_buttons">SAVE</string>
    <string name="menu_open">Menu open</string>
    <string name="menu_closed">Menu closed</string>
    <string name="invalid_exercises">Invalid exercises</string>
    <string name="next_training_to_do">Next Training To Do</string>
    <string name="text_type">Exercise type</string>
    <string name="btDoSelectedTraining">Do Selected Training</string>
    <string name="btGetNextTraining">Show Next Training</string>
    <string name="btOpenInNotificationBar">Open in notification bar</string>
    <string name="bt_delete_this_training">Delete this training</string>
    <string name="bt_save">Save</string>
    <string name="logged_with_succes">Logged with succes</string>
    <string name="connection_error">Connection error</string>
    <string name="invalid_credentials">Invalis credentials</string>
    <string name="registred_with_succes">Registred with success</string>
    <string name="email_already_registred">Email already registered</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="different_passwords">The passwords are different</string>
    <string name="passwordhint">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="emailhint">E-mail</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="user_does_not_exist">User does not exist</string>
    <string-array name="exercise_types">
        <item>Normal</item>
        <item>Isometric</item>
        <item>Drop set</item>
        <item>Unilateral</item>
        <item>Explosive</item>
    </string-array>
</resources>