<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityRegisterLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_authentication.presenter.ui.RegisterActivity">


    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authcvPassword2" />

    <Button
        android:id="@+id/buttonDoRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_button_add_exercise"
        android:text="@string/register"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonBackToLogin"
        app:layout_constraintTop_toBottomOf="@+id/progressBarRegister" />

    <com.tierriapps.myworkoutorganizer.customviews.AuthFieldCustomView
        android:id="@+id/authcvEmailRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authFieldCustomViewName"
        app:textSize="@dimen/authentication_fields"
        app:topHintSize="@dimen/hints_size"
        app:topHintText="@string/emailhint" />

    <com.tierriapps.myworkoutorganizer.customviews.AuthFieldCustomView
        android:id="@+id/authcvPassword1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authcvEmailRegister"
        app:textSize="@dimen/authentication_fields"
        app:textVisibility="false"
        app:topHintSize="@dimen/hints_size"
        app:topHintText="@string/passwordhint"
        app:visibilityButton="true" />

    <com.tierriapps.myworkoutorganizer.customviews.AuthFieldCustomView
        android:id="@+id/authcvPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authcvPassword1"
        app:textSize="@dimen/authentication_fields"
        app:textVisibility="false"
        app:topHintSize="@dimen/hints_size"
        app:topHintText="@string/confirmPassword"
        app:visibilityButton="true" />

    <Button
        android:id="@+id/buttonBackToLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_button_add_exercise"
        android:text="back"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDoRegister"
        app:layout_constraintEnd_toStartOf="@+id/buttonDoRegister"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonDoRegister" />

    <com.tierriapps.myworkoutorganizer.customviews.AuthFieldCustomView
        android:id="@+id/authFieldCustomViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textGravity="center"
        app:textSize="@dimen/authentication_fields"
        app:topHintSize="@dimen/hints_size"
        app:topHintText="Name" />

</androidx.constraintlayout.widget.ConstraintLayout>