<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutExerciseToDo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="3dp"
    android:background="@drawable/shape_exercises_container"
    android:paddingBottom="3dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewExercisePictureToDo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        app:cardCornerRadius="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewExercisePictureToDo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tvExerciseNameToDo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:hint="@string/hint_exercise_name"
        android:maxLength="@integer/max_length_item_names"
        android:textColor="@color/text_main_color"
        android:textColorHint="@color/text_main_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewExerciseTypeToDo"
        app:layout_constraintStart_toEndOf="@+id/cardviewExercisePictureToDo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvExerciseDescriptionToDo"
        style="@style/style_small_texts"
        android:layout_width="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/exercise_description"
        android:maxLength="@integer/max_length_descriptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardviewExercisePictureToDo"
        app:layout_constraintTop_toBottomOf="@+id/tvExerciseNameToDo" />

    <ImageView
        android:id="@+id/imageViewSeriesToDo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:src="@drawable/baseline_series"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/cardviewExercisePictureToDo"
        app:layout_constraintTop_toBottomOf="@+id/cardviewExercisePictureToDo" />

    <TextView
        android:id="@+id/tvSeriesToDo"
        style="@style/style_small_texts"
        android:layout_marginTop="6dp"
        android:hint="@string/hint_series"
        android:maxLength="@integer/max_length_numeric_inputs"
        app:layout_constraintEnd_toStartOf="@+id/tvWeight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/imageViewSeriesToDo"
        app:layout_constraintTop_toBottomOf="@+id/cardviewExercisePictureToDo" />

    <ImageView
        android:id="@+id/imageViewWeightToDo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_weight"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewSeriesToDo"
        app:layout_constraintEnd_toStartOf="@+id/editTextWeightToDo"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toTopOf="@+id/imageViewSeriesToDo" />

    <EditText
        android:id="@+id/editTextWeightToDo"
        style="@style/style_small_texts"
        android:hint="@string/hint_weight"
        android:inputType="number|text"
        android:maxLength="@integer/max_length_numeric_inputs"
        app:layout_constraintBottom_toBottomOf="@+id/tvSeriesToDo"
        app:layout_constraintEnd_toStartOf="@+id/tvRestTimeToDo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvSeriesToDo"
        app:layout_constraintTop_toTopOf="@+id/tvSeriesToDo" />

    <ImageView
        android:id="@+id/imageViewRestIconToDo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_watch"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewWeightToDo"
        app:layout_constraintEnd_toStartOf="@+id/tvRestTimeToDo"
        app:layout_constraintTop_toTopOf="@+id/imageViewWeightToDo"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvRestTimeToDo"
        style="@style/style_small_texts"
        android:layout_marginEnd="6dp"
        android:hint="@string/hint_resttime"
        android:maxLength="@integer/max_length_numeric_inputs"
        app:layout_constraintBottom_toBottomOf="@+id/tvSeriesToDo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvWeightToDo"
        app:layout_constraintTop_toTopOf="@+id/tvSeriesToDo" />

    <TextView
        android:id="@+id/textViewExerciseTypeToDo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="3dp"
        android:gravity="center"
        android:text="@string/text_type"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvExerciseNameToDo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvWeightToDo"
        app:layout_constraintTop_toTopOf="@+id/tvExerciseNameToDo" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSeriesToDo">

        <EditText
            android:id="@+id/textViewS1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number|text"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/textViewS2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number|text"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/textViewS3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number|text"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/textViewS4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number|text"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/textViewS5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number|text"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/textViewS6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number|text"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="gone" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>